# lobster-challenge

./: .gitignore  README.md  cabal.project  hie.yaml  names.md  names.md Lovelace  parameters.txt  plutus-lobster.cabal
app/: plutus-lobster-deadline.hs  plutus-lobster-tokens.hs  plutus-lobster-v1.hs  plutus-lobster-v2.hs  plutus-lobster-vote-count.hs  plutus-lobster.hs
plutus/: ENGivenMale.json  cabal.project  hie.yaml  nft-mint-policy.plutus  plutus-lobster.cabal
plutus/app/: compare-hash-v4.hs  plutus-lobster-names.hs  plutus-lobster-tokens-v4.hs  plutus-lobster-tokens.hs  plutus-lobster-v1.hs  plutus-lobster-v2.hs  plutus-lobster-v4.hs  plutus-lobster.hs  pubkeyhash-json-encoder.hs
plutus/src/Cardano/PlutusLobster/: LobsterPolicies.hs  LobsterScript.hs  LobsterV1Script.hs  LobsterV2Script.hs
scripts/: lobster-contribute-deadline.sh  lobster-contribute.ps1  lobster-contribute.sh  lobster-deadline.plutus  lobster-deploy-deadline.sh  lobster-deploy-testnet.sh  lobster-deploy.sh  lobster-finalize-deadline.sh  lobster-mint-nft-testnet.sh  lobster-mint-nft.sh  lobster-process-votes-testnet.sh  lobster.plutus  mainnet-current-slot.sh  mainnet-policyid.sh  mainnet-query-protocol-parameters.sh  mainnet-script-address.sh  mainnet-utxo-at.sh  nft-mint-policy.plutus  submit-vote-testnet.sh
src/Cardano/PlutusLobster/: LobsterDeadlineScript.hs  LobsterPolicies.hs  LobsterScript.hs  LobsterV2Script.hs  LobsterVoteCountScript.hs
test/: cabal.project  hie.yaml  plutus-lobster-test.cabal  testnet-protocol-parameters.json
test/src/Cardano/PlutusLobster/: LobsterPolicies.hs  LobsterV2Script.hs
test/src/Cardano/PlutusLobster/Test/: LobsterV2.hs
