cabal-version: 2.4

name:                   plutus-lobster
version:                1.0.0
description:            Lobster naming.
author:                 Lars Brünjes
maintainer:             lars.bruenjes@iohk.io
license:                Apache-2.0
license-file:           LICENSE
build-type:             Simple
data-files:             ENGivenMale.json
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.PlutusLobster.LobsterPolicies
                      , Cardano.PlutusLobster.LobsterV1Script
                      , Cardano.PlutusLobster.LobsterV2Script

  build-depends:        bytestring
                      , cardano-api
                      , plutus-core
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable plutus-lobster-tokens
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-lobster-tokens.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:        cardano-api
                      , plutus-ledger
                      , plutus-lobster

executable plutus-lobster-v1
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-lobster-v1.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , plutus-ledger
                      , plutus-lobster

executable plutus-lobster-v2
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-lobster-v2.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , plutus-ledger
                      , plutus-lobster

executable plutus-lobster-names
  hs-source-dirs:       app
  main-is:              plutus-lobster-names.hs
  other-modules:        Paths_plutus_lobster
  autogen-modules:      Paths_plutus_lobster
  ghc-options:          -Wall

  build-depends:        aeson
                      , base
                      , bytestring
